Revert to surefire 3.0.0.M4