@@ -200,16 +200,13 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>3.0.0-M5</version>
+                        <version>3.0.0-M4</version>
                         <configuration>
-                            <!-- 3.0.0-M4 configuration -->
-<!--                            <argLine>-->
-<!--                                ${argLine}-->
-<!--                                &#45;&#45;illegal-access=deny-->
-<!--                                -Xmx1500m-->
-<!--                            </argLine>-->
-                            <!-- Activate the use of TCP to transmit events to the plugin -->
-                            <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory" />
+                            <argLine>
+                                ${argLine}
+                                --illegal-access=deny
+                                -Xmx1500m
+                            </argLine>
                         </configuration>
                     </plugin>
                 </plugins>
